// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`paddingInlineEnd renders 0 1`] = `
Array [
  .c0 {
  padding-inline-end: 0;
}

<div
    className="c0"
  />,
  .c0 {
  padding-inline-end: 0;
}

<div
    className="c0"
  />,
  .c0 {
  padding-inline-end: 0;
}

<div
    className="c0"
  />,
  .c0 {
  padding-inline-end: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`paddingInlineEnd renders function 1`] = `
Array [
  .c0 {
  padding-inline-end: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  padding-inline-end: has;
}

<div
    className="c0"
  />,
  .c0 {
  padding-inline-end: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  padding-inline-end: has;
}

<div
    className="c0"
  />,
]
`;

exports[`paddingInlineEnd renders invalid theme path 1`] = `
Array [
  .c0 {
  padding-inline-end: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  padding-inline-end: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  padding-inline-end: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  padding-inline-end: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`paddingInlineEnd renders negative number 1`] = `
Array [
  .c0 {
  padding-inline-end: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  padding-inline-end: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  padding-inline-end: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  padding-inline-end: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`paddingInlineEnd renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  padding-inline-end: July;
}

@media screen and (min-width:November) {
  .c0 {
    padding-inline-end: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    padding-inline-end: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    padding-inline-end: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    padding-inline-end: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  padding-inline-end: July;
}

@media screen and (min-width:November) {
  .c0 {
    padding-inline-end: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    padding-inline-end: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    padding-inline-end: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    padding-inline-end: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  padding-inline-end: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    padding-inline-end: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    padding-inline-end: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    padding-inline-end: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    padding-inline-end: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  padding-inline-end: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    padding-inline-end: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    padding-inline-end: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    padding-inline-end: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    padding-inline-end: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`paddingInlineEnd renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    padding-inline-end: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    padding-inline-end: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    padding-inline-end: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    padding-inline-end: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    padding-inline-end: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    padding-inline-end: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    padding-inline-end: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    padding-inline-end: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    padding-inline-end: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    padding-inline-end: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    padding-inline-end: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    padding-inline-end: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    padding-inline-end: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    padding-inline-end: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    padding-inline-end: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    padding-inline-end: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`paddingInlineEnd renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  padding-inline-end: July;
}

@media May {
  .c0 {
    padding-inline-end: August;
  }
}

@media April {
  .c0 {
    padding-inline-end: September;
  }
}

@media January {
  .c0 {
    padding-inline-end: November;
  }
}

@media April {
  .c0 {
    padding-inline-end: August;
  }
}

@media June {
  .c0 {
    padding-inline-end: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  padding-inline-end: July;
}

@media May {
  .c0 {
    padding-inline-end: August;
  }
}

@media April {
  .c0 {
    padding-inline-end: September;
  }
}

@media January {
  .c0 {
    padding-inline-end: November;
  }
}

@media April {
  .c0 {
    padding-inline-end: August;
  }
}

@media June {
  .c0 {
    padding-inline-end: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  padding-inline-end: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    padding-inline-end: November;
  }
}

@media April {
  .c0 {
    padding-inline-end: January;
  }
}

@media January {
  .c0 {
    padding-inline-end: December;
  }
}

@media April {
  .c0 {
    padding-inline-end: April;
  }
}

@media June {
  .c0 {
    padding-inline-end: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  padding-inline-end: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    padding-inline-end: November;
  }
}

@media April {
  .c0 {
    padding-inline-end: January;
  }
}

@media January {
  .c0 {
    padding-inline-end: December;
  }
}

@media April {
  .c0 {
    padding-inline-end: April;
  }
}

@media June {
  .c0 {
    padding-inline-end: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`paddingInlineEnd renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    padding-inline-end: July;
  }
}

@media April {
  .c0 {
    padding-inline-end: August;
  }
}

@media January {
  .c0 {
    padding-inline-end: September;
  }
}

@media April {
  .c0 {
    padding-inline-end: November;
  }
}

@media June {
  .c0 {
    padding-inline-end: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    padding-inline-end: July;
  }
}

@media April {
  .c0 {
    padding-inline-end: August;
  }
}

@media January {
  .c0 {
    padding-inline-end: September;
  }
}

@media April {
  .c0 {
    padding-inline-end: November;
  }
}

@media June {
  .c0 {
    padding-inline-end: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    padding-inline-end: January;
  }
}

@media April {
  .c0 {
    padding-inline-end: December;
  }
}

@media January {
  .c0 {
    padding-inline-end: April;
  }
}

@media April {
  .c0 {
    padding-inline-end: May;
  }
}

@media June {
  .c0 {
    padding-inline-end: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    padding-inline-end: January;
  }
}

@media April {
  .c0 {
    padding-inline-end: December;
  }
}

@media January {
  .c0 {
    padding-inline-end: April;
  }
}

@media April {
  .c0 {
    padding-inline-end: May;
  }
}

@media June {
  .c0 {
    padding-inline-end: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`paddingInlineEnd renders postitive number 1`] = `
Array [
  .c0 {
  padding-inline-end: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  padding-inline-end: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  padding-inline-end: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  padding-inline-end: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`paddingInlineEnd renders string 1`] = `
Array [
  .c0 {
  padding-inline-end: July;
}

<div
    className="c0"
  />,
  .c0 {
  padding-inline-end: July;
}

<div
    className="c0"
  />,
  .c0 {
  padding-inline-end: June;
}

<div
    className="c0"
  />,
  .c0 {
  padding-inline-end: June;
}

<div
    className="c0"
  />,
]
`;

exports[`paddingInlineEnd renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`paddingInlineEnd renders valid theme path 1`] = `
Array [
  .c0 {
  padding-inline-end: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  padding-inline-end: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  padding-inline-end: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  padding-inline-end: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
